--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "webpack serve --open"
-   },
-"repository": {
+  },
+  "repository": {
     "type": "git",
     "url": "git+https://github.com/NerdsAreIn/toDo-list.git"
   },
-"bugs": {
+  "bugs": {
     "url": "https://github.com/NerdsAreIn/toDo-list/issues"
   },
   "homepage": "https://github.com/NerdsAreIn/toDo-list#readme",
@@ -22,8 +22,8 @@
   "dependencies": {
     "css-loader": "^6.5.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.64.2",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.5.0"
+    "webpack-dev-server": "^4.6.0",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
