--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "license": "ISC",
   "dependencies": {
     "css-loader": "^6.5.1",
+    "html-loader": "^3.1.0",
     "style-loader": "^3.3.1",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "webpack": "^5.65.0"
+    "webpack-dev-server": "^4.6.0"
   }
 }
