--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "start": "webpack serve --open",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"    
+    "predeploy": "npm run build",	
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
